Fix(web): `FileUploader` focus visibility

--- a/packages/web/src/scss/components/FileUploader/_FileUploaderAttachment.scss
+++ b/packages/web/src/scss/components/FileUploader/_FileUploaderAttachment.scss
@@ -24,7 +24,7 @@
 
     color: inherit;
 
-    &:focus {
+    &:focus-visible {
         outline: 0;
         box-shadow: form-fields-theme.$input-focus-shadow;
     }
