--- a/packages/web/src/scss/components/FileUploader/_FileUploaderInput.scss
+++ b/packages/web/src/scss/components/FileUploader/_FileUploaderInput.scss
@@ -32,7 +32,7 @@ $_field-name: 'FileUploaderInput';
     background-color: theme.$input-drop-zone-background;
 }
 
-.FileUploaderInput__input:focus ~ .FileUploaderInput__dropZone {
+.FileUploaderInput__input:focus-visible ~ .FileUploaderInput__dropZone {
     box-shadow: form-fields-theme.$input-focus-shadow;
 }
 
